force-app/shared/config/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <description>Object to hold custom exception messages</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0}</displayFormat>
        <label>ApplicationLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>