force-app/shared/config/objects/Application_Log__c/fields/Debug_Level__c.field-meta.xml
<CustomField>
    <fullName>Debug_Level__c</fullName>
    <description>Error, Info, Warning, Debug</description>
    <label>Debug Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
                <default>true</default>
                <label>Error</label>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>