force-app/shared/config/objects/Application_Log__c/fields/Integration_Payload__c.field-meta.xml
<CustomField>
    <fullName>Integration_Payload__c</fullName>
    <description>If log is integration related show xml payload</description>
    <label>Integration Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>