force-app/shared/config/objects/Application_Log__c/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
    <label>Reference Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>