force-app/shared/config/objects/Application_Log__c/fields/Source_Function__c.field-meta.xml
<CustomField>
    <fullName>Source_Function__c</fullName>
    <description>The originating function in the class (e.g. UpdateDivision())</description>
    <label>Source Function</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>