force-app/shared/config/objects/Application_Log__c/fields/Timer__c.field-meta.xml
<CustomField>
    <fullName>Timer__c</fullName>
    <description>The time in milliseconds for the transaction</description>
    <label>Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>